--- a/bio.html
+++ b/bio.html
@@ -1,1 +1,30 @@
-
+<html lang="en">
+<head>
+  <title> Bio </title>
+  <link rel="stylesheet" type="text/css" href="bio.css" />
+  <script src="sketch.js"></script>
+  <meta charset="utf-8">
+</head>
+<body>
+<h1> Artist statement:</h1>
+<div class="row">
+  <p class="description"> The reason behind this data is to educate people more about the space and also understand what the importance of learning by both seeing and reading is; I believe that reading and having a visual aid helps us as humans to understand the subject better, whether it is math or any other subject.As for the project itself it is rather a test to see if in fact the use of image and writing combined help the students understand the subject matter better.</p>
+</div>
+  <div class="link-container">
+    <a href="index.html">Home</a>
+  </div>
+  <div class="animation-area">
+     <ul class="box-area">
+       <li></li>
+       <li></li>
+       <li></li>
+       <li></li>
+       <li></li>
+       <li></li>
+       <li></li>
+       <li></li>
+       <li></li>
+   </ul>
+ </div>
+</body>
+</html>
